# scan_view

./: .beman-tidy.yaml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  vcpkg.json
.github/: CODEOWNERS
.github/workflows/: ci_tests.yml  pre-commit-check.yml  pre-commit-update.yml  vcpkg-release.yml
examples/: CMakeLists.txt  README.md  basic_example.cpp  complex_example.cpp  identity_as_default_projection.cpp  identity_direct_usage.cpp
include/beman/scan_view/: CMakeLists.txt  config.hpp  config_generated.hpp.in  identity.hpp  scan.hpp  scan_view.cppm  scan_view.hpp
include/beman/scan_view/detail/: expo_only.hpp
infra/cmake/: enable-experimental-import-std.cmake  gnu-toolchain.cmake
port/: portfile.cmake.in  vcpkg.json.in
src/beman/scan_view/: CMakeLists.txt  beman.scan_view-config.cmake.in  identity.cpp
tests/beman/scan_view/: CMakeLists.txt  basic.test.cpp
